--- a/tokens/application.json
+++ b/tokens/application.json
@@ -660,6 +660,26 @@
           }
         }
       }
+    },
+    "textCase": {
+      "control": {
+        "value": "none",
+        "type": "textCase"
+      },
+      "label": {
+        "value": "none",
+        "type": "textCase"
+      }
+    },
+    "letterSpacing": {
+      "control": {
+        "value": "0%",
+        "type": "letterSpacing"
+      },
+      "label": {
+        "value": "0%",
+        "type": "letterSpacing"
+      }
     }
   }
 }
