--- a/tokens/application.json
+++ b/tokens/application.json
@@ -60,15 +60,15 @@
         },
         "border": {
           "sm": {
-            "value": "1px",
+            "value": "2px",
             "type": "dimension"
           },
           "md": {
-            "value": "1px",
+            "value": "2px",
             "type": "dimension"
           },
           "lg": {
-            "value": "1px",
+            "value": "2px",
             "type": "dimension"
           }
         }
@@ -593,7 +593,7 @@
         "text": {
           "value": {
             "fontFamily": "{config.fontFamily.ui}",
-            "fontWeight": "{config.fontWeight.medium}",
+            "fontWeight": "{config.fontWeight.semibold}",
             "lineHeight": "120%",
             "fontSize": "{config.fontSize.control}"
           },
