--- a/tokens/config.json
+++ b/tokens/config.json
@@ -2,19 +2,23 @@
   "config": {
     "fontFamily": {
       "primary": {
-        "value": "test",
+        "value": "Wand UI Pro",
         "type": "fontFamilies"
       },
       "secondary": {
-        "value": "test",
+        "value": "Wand UI Pro",
         "type": "fontFamilies"
       },
       "tertiary": {
-        "value": "test",
+        "value": "Wand UI Pro",
         "type": "fontFamilies"
       },
       "ui": {
         "value": "Wand UI Pro",
+        "type": "fontFamilies"
+      },
+      "uiAlt": {
+        "value": "Margiela Mono",
         "type": "fontFamilies"
       },
       "symbol": {
