--- a/tokens/config.json
+++ b/tokens/config.json
@@ -145,7 +145,7 @@
           "type": "dimension"
         },
         "height": {
-          "value": "2.5rem",
+          "value": "3rem",
           "type": "dimension"
         },
         "gap": {
@@ -154,6 +154,10 @@
         },
         "padding": {
           "value": "0.875rem",
+          "type": "dimension"
+        },
+        "symbol": {
+          "value": "1.125rem",
           "type": "dimension"
         }
       },
@@ -173,6 +177,10 @@
         "padding": {
           "value": "0.875rem",
           "type": "dimension"
+        },
+        "symbol": {
+          "value": "1.125rem",
+          "type": "dimension"
         }
       }
     },
@@ -182,7 +190,7 @@
         "type": "fontSizes"
       },
       "control": {
-        "value": "{config.fontSize.base} - 0.125rem",
+        "value": "{config.fontSize.base}",
         "type": "fontSizes"
       },
       "label": {
