--- a/tokens/application.json
+++ b/tokens/application.json
@@ -745,7 +745,7 @@
           },
           "focusRing": {
             "default": {
-              "value": "0.3",
+              "value": "0.6",
               "type": "other"
             }
           }
@@ -859,14 +859,24 @@
           "type": "boxShadow"
         },
         "active": {
-          "value": {
-            "x": "0",
-            "y": "0",
-            "blur": "0",
-            "spread": "6",
-            "color": "{app.color.component.info.ring.default}",
-            "type": "dropShadow"
-          },
+          "value": [
+            {
+              "x": "0",
+              "y": "0",
+              "blur": "0",
+              "spread": "4",
+              "color": "{app.color.component.info.ring.default}",
+              "type": "dropShadow"
+            },
+            {
+              "x": "0",
+              "y": "0",
+              "blur": "0",
+              "spread": "{app.dimension.control.border.md}",
+              "color": "{app.color.component.info.border.solid}",
+              "type": "innerShadow"
+            }
+          ],
           "type": "boxShadow"
         }
       }
