--- a/tokens/application.json
+++ b/tokens/application.json
@@ -614,41 +614,35 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue}, {config.color.neutral.saturation}, 80%)"
+              "value": "hsl({config.color.neutral.hue}, {config.color.neutral.saturation}, 90%)"
             },
             "tinted": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue}, {config.color.neutral.saturation}, 80%, {app.modifier.color.disabled.bg})"
+              "value": "hsla({config.color.neutral.hue}, {config.color.neutral.saturation}, 70%, {app.modifier.color.disabled.bg})"
             }
           },
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.info.hue}, {config.color.info.saturation}, 40%)"
+              "value": "hsl({config.color.neutral.hue}, {config.color.neutral.saturation}, 80%)"
             },
             "tinted": {
               "type": "color",
-              "value": "hsla({config.color.info.hue}, {config.color.info.saturation}, 50%, {app.modifier.color.info.tinted.default})"
+              "value": "hsla({config.color.neutral.hue}, {config.color.neutral.saturation}, 80%, {app.modifier.color.disabled.border})"
             }
           },
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.info.hue}, {config.color.info.saturation}, 30%)"
+              "value": "hsl({config.color.neutral.hue}, {config.color.neutral.saturation}, 70%)"
             },
             "onSolid": {
               "type": "color",
-              "value": "white"
+              "value": "hsl({config.color.neutral.hue}, {config.color.neutral.saturation}, 70%)"
             },
             "onTinted": {
               "type": "color",
-              "value": "hsl({config.color.info.hue}, {config.color.info.saturation}, 20%)"
-            }
-          },
-          "ring": {
-            "default": {
-              "type": "color",
-              "value": "hsla({config.color.info.hue}, {config.color.info.saturation}, 50%, {app.modifier.color.info.focusRing.default})"
+              "value": "hsl({config.color.neutral.hue}, {config.color.neutral.saturation}, 70%)"
             }
           }
         }
