--- a/tokens/application.json
+++ b/tokens/application.json
@@ -474,7 +474,7 @@
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 40%)"
+              "value": "hsl({config.color.primary.hue}, {config.color.primary.saturation}, 30%)"
             },
             "tinted": {
               "type": "color",
@@ -500,27 +500,27 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 50%)"
+              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 20%)"
             },
             "tinted": {
               "type": "color",
-              "value": "hsla({config.color.secondary.hue}, {config.color.secondary.saturation}, 50%, {app.modifier.color.secondary.tinted.default})"
+              "value": "hsla({config.color.secondary.hue}, {config.color.secondary.saturation}, 60%, {app.modifier.color.secondary.tinted.default})"
             }
           },
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 40%)"
+              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 20%)"
             },
             "tinted": {
               "type": "color",
-              "value": "hsla({config.color.secondary.hue}, {config.color.secondary.saturation}, 50%, {app.modifier.color.secondary.tinted.default})"
+              "value": "hsla({config.color.secondary.hue}, {config.color.secondary.saturation}, 60%, {app.modifier.color.secondary.tinted.default})"
             }
           },
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 30%)"
+              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 20%)"
             },
             "onSolid": {
               "type": "color",
@@ -528,7 +528,7 @@
             },
             "onTinted": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 20%)"
+              "value": "hsl({config.color.secondary.hue}, {config.color.secondary.saturation}, 10%)"
             }
           }
         },
@@ -546,7 +546,7 @@
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.danger.hue}, {config.color.danger.saturation}, 40%)"
+              "value": "hsl({config.color.danger.hue}, {config.color.danger.saturation}, 30%)"
             },
             "tinted": {
               "type": "color",
@@ -602,12 +602,6 @@
               "type": "color",
               "value": "hsl({config.color.info.hue}, {config.color.info.saturation}, 20%)"
             }
-          },
-          "ring": {
-            "default": {
-              "type": "color",
-              "value": "hsla({config.color.info.hue}, {config.color.info.saturation}, 50%, {app.modifier.color.info.focusRing.default})"
-            }
           }
         },
         "disabled": {
@@ -643,6 +637,20 @@
             "onTinted": {
               "type": "color",
               "value": "hsl({config.color.neutral.hue}, {config.color.neutral.saturation}, 70%)"
+            }
+          }
+        },
+        "focus": {
+          "border": {
+            "default": {
+              "type": "color",
+              "value": "hsl({config.color.info.hue}, {config.color.info.saturation}, 30%)"
+            }
+          },
+          "focusRing": {
+            "default": {
+              "type": "color",
+              "value": "hsla({config.color.info.hue}, {config.color.info.saturation}, 50%, {app.modifier.color.info.focusRing.default})"
             }
           }
         }
