--- a/tokens/application.json
+++ b/tokens/application.json
@@ -916,16 +916,8 @@
               "y": "0",
               "blur": "0",
               "spread": "4",
-              "color": "{app.color.component.info.ring.default}",
+              "color": "{app.color.component.focus.focusRing.default}",
               "type": "dropShadow"
-            },
-            {
-              "x": "0",
-              "y": "0",
-              "blur": "0",
-              "spread": "{app.dimension.control.border.md}",
-              "color": "{app.color.component.info.fg.onTinted}",
-              "type": "innerShadow"
             }
           ],
           "type": "boxShadow"
